--- a/client/app/home/home.html
+++ b/client/app/home/home.html
@@ -2,6 +2,7 @@
   <div class="col-sm-6 col-sm-offset-3 cta">
       <h1>Give back, feel great</h1>
       <h4>Choose one project to help each week of 2015</h4>
-      <a ui-sref="signup" class="btn btn-primary btn-lg">make your pledge today</a>
+      <a ui-sref="signup" class="btn btn-primary btn-lg">Make your pledge today</a>
+
   </div>
 </div>
