Form mostly styled

--- a/client/app/home/home.html
+++ b/client/app/home/home.html
@@ -2,6 +2,6 @@
   <div class="view-container home-signup">
       <h1>Give back, feel great</h1>
       <h2>Choose one project to help each week of 2015</h2>
-      <button class="btn-lg" ui-sref="signup">make your pledge today</button>
+      <button class="btn-lg" ui-sref="signup">Make your pledge today</button>
   </div>
 </div>
