Add register route.

--- a/client/index.html
+++ b/client/index.html
@@ -14,6 +14,7 @@
   <script src="app/signup/signup.js"></script>
   <script src="app/charities/charities.js"></script>
   <script src="app/signin/signin.js"></script>
+  <script src="app/register/register.js"></script>
   <script src="app/factories/factories.js"></script>
   <script src="app/ui/scripts.js"></script>
   <!-- End Scripts -->
@@ -33,6 +34,7 @@
     
     <div class="login-controls">
       <button ui-sref="signin">Sign in</button>
+      <button ui-sref="register">Register your charity</button>
     </div> <!-- .login-controls -->
   </header>
 
