--- a/client/app/creditcard/creditcard.html
+++ b/client/app/creditcard/creditcard.html
@@ -1,32 +1,30 @@
 <div >
 	<form id="payment-form" ng-submit='addCard()' novalidate>
+	  <span class="payment-errors"> 6011111111111117</span>
 	  <div class="form-row">
 	    <label>
 	      <span>Card Number:</span>
-	      <input type="text" size="20" data-stripe="number" ng-model="formData.number"/>
+	      <input type="text" size="20" data-stripe="number"/>
 	    </label>
 	  </div>
 
 	  <div class="form-row">
 	    <label>
 	      <span>CVC:</span>
-	      <input type="text" size="4" data-stripe="cvc" ng-model="formData.cvc"/>
+	      <input type="text" size="4" data-stripe="cvc"/>
 	    </label>
 	  </div>
 
 	  <div class="form-row">
 	    <label>
 	      <span>Expiration (MM/YYYY):</span>
-	      <input type="text" size="2" data-stripe="exp-month" ng-model="formData.expmonth"/>
+	      <input type="text" size="2" data-stripe="exp-month"/>
 	    </label>
 	    <span> / </span>
-	    <input type="text" size="4" data-stripe="exp-year" ng-model="formData.expyear"/>
+	    <input type="text" size="4" data-stripe="exp-year"/>
 	  </div>
 
 	  <button type="submit">Add Card</button>
 
-	</form> <br/>
-	<ul ng-repeat="card in cards"> 
-		<li> {{card.number}} - - - - - - - - {{card.exp}} </li>
-	</ul>
+	</form>
 </div>
