--- a/client/index.html
+++ b/client/index.html
@@ -18,6 +18,7 @@
   <script src="app/creditcard/creditcard.js"></script>
   <script src="app/signin/signin.js"></script>
   <script src="app/register/register.js"></script>
+  <script src="app/account/account.js"></script>
   <script src="app/factories/factories.js"></script>
   <script src="app/ui/scripts.js"></script>
   <!-- End Scripts -->
