Build skeleton of front-end for unvetted charity display.

--- a/client/index.html
+++ b/client/index.html
@@ -19,6 +19,7 @@
   <script src="app/signin/signin.js"></script>
   <script src="app/register/register.js"></script>
   <script src="app/account/account.js"></script>
+  <script src="app/charityDash/charityDash.js"></script>
   <script src="app/factories/factories.js"></script>
   <script src="app/ui/scripts.js"></script>
   <!-- End Scripts -->
