--- a/client/app/account/account.html
+++ b/client/app/account/account.html
@@ -1,9 +1,9 @@
 <div id="signup-page" class="view-container">
   <div>
-    <h2>Create an account</h2>
+    <h2>Account Settings</h2>
   </div>
   <div>
-    <form name="signupForm" ng-submit="signup()" novalidate>
+    <form name="signupForm" ng-submit="submit()" novalidate>
       <fieldset class="nameContainer form-section">
         <!-- firstname input form -->
         <label for="firstName">Name</label>
