Created make a donation button

--- a/client/app/signup/signup.html
+++ b/client/app/signup/signup.html
@@ -1,20 +1,10 @@
 <div id="signup-page" class="view-container">
   <div>
     <h2>Create an account</h2>
-    <script>
-      // var frame = document.createElement('iframe');
-      // frame.src = 'http://localhost:8000';
 
-      
-      // document.getElementById('test').appendChild(frame);
-
-    </script>
-
-    <script src="http://localhost:8000/api/charity/3619?jsonp=alert">//test();</script>
-
-<!--     <div id="test">
-       
-    </div> -->
+    <div id="test">
+      <iframe src="http://localhost:8000/api/charity/badge/3619" seamless="seamless"></iframe>
+    </div>
   </div>
   <div>
     <form id="signup-form" name="signupForm" ng-submit="signup()" novalidate >
