--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
   
   <!-- Scripts -->
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="bower_components/angular/angular.min.js"></script>
   <!-- <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script> -->
   <script src="bower_components/angular/angular.js"></script>
   <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
