--- a/client/app/signup/signup.html
+++ b/client/app/signup/signup.html
@@ -3,7 +3,7 @@
     <h2>Create an account</h2>
 
     <div id="test">
-      <iframe src="http://localhost:8000/api/charity/badge/3619" seamless="seamless"></iframe>
+      <iframe style="border: none; " width="200" height="100" src="http://localhost:8000/api/charity/badge/3619" seamless="seamless"></iframe>
     </div>
   </div>
   <div>
